# code-route

./: .code_route_todos.json  AGENTS.md  CLAUDE.md  app.py  config.py  cr.py  install.sh  pyproject.toml  readme.md  run.sh  test_conversation.json
.claude/agents/: code-reviewer.md
code_route/: __init__.py  app 2.py  app.py  assistant.py  cli.py  config.py  themes.py
code_route/prompts/: system_prompts.py
code_route/tools/: agenttool.py  bashtool.py  browsertool.py  createfolderstool.py  diffeditortool.py  duckduckgotool.py  e2bcodetool.py  filecontentreadertool.py  filecreatortool.py  fileedittool.py  greptool.py  lintingtool.py  lstool.py  multiedittool.py  notebookedittool.py  notebookreadtool.py  screenshottool.py  todowritetool.py  toolcreator.py  uvpackagemanager.py  weathertool.py  webscrapertool.py
prompts/: system_prompts.py
tools/: agenttool.py  base.py  bashtool.py  browsertool.py  createfolderstool.py  diffeditortool.py  duckduckgotool.py  e2bcodetool.py  filecontentreadertool.py  filecreatortool.py  fileedittool.py  globtool.py  greptool.py  lintingtool.py  notebookedittool.py  notebookreadtool.py  screenshottool.py  toolcreator.py  weathertool.py  webscrapertool.py
